--- a/style/style.css
+++ b/style/style.css
@@ -493,13 +493,149 @@ header .container {
   background: #FF5C12;
 }
 
+.manager-card {
+  background-image: url(/img/brackets-background.png);
+  background-repeat: no-repeat;
+  background-position: 48% 30%;
+  margin: 120px 0;
+  padding: 80px 0;
+}
 
+.manager-card .container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 60px;
+  max-width: 1000px;
+  margin: 0 auto;
+  position: relative;
+}
+
+.manager {
+  width: 399px;
+  height: 492px;
+}
+
+.manager-subtitle {
+  flex: 1;
+}
 
 .manager-info {
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-size: 14px;
   color: rgba(255, 255, 255, 0.78);
+  line-height: 30px;
+  letter-spacing: 1.5%;
+}
+
+.arrow-left,
+.arrow-right {
+  position: absolute;
+  border: none;
+  font-size: 40px;
+  width: 48px;
+  height: 48px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: none;
+}
+
+.arrow-left {
+  left: -140px;
+  color: rgba(255, 255, 255, 0.3);
+}
+
+.arrow-right {
+  right: 10px;
+  color: #FF6E30;
+  transition: color 0.3s;
+}
+
+.slaider {
+  display: flex;
+  justify-content: center;
+  gap: 8px;
+  margin-top: 40px;
+  cursor: pointer;
+}
+
+.slaid-orange {
+  background-color: #FF6E30;
+  width: 44px;
+  height: 8px;
+  border-radius: 4px;
+  border: none;
+  cursor: pointer;
+}
+
+.slaid {
+  background-color: #283036;
+  width: 44px;
+  height: 6px;
+  border: none;
+  border-radius: 4px;
+}
+
+.contributor {
+  text-align: center;
+  padding: 80px 0;
+  margin: 120px 0;
+}
+
+.contributor h2 {
+  font-weight: 500;
+  font-size: 48px;
+  margin-bottom: 25px;
+  color: rgba(255, 255, 255, 0.9);
+}
+
+.contributor p {
+  color: rgba(255, 255, 255, 0.55);
+  font-size: 18px;
+  line-height: 1.6;
+  margin-bottom: 60px;
+}
+
+.contributor-form {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #283036;
+  border: 1px solid #323A3F;
+  border-radius: 15px;
+  max-width: 549px;
+  height: 64px;
+  padding: 8px 11px;
+   margin: 0 auto;
+  margin-top: 60px;
+}
+
+.button-join-us {
+  background-color: #ff6e30;
+  color: #ffffff;
+  width: 130px;
+  height: 48px;
+  border: none;
+  border-radius: 8px;
+  font-weight: 600;
+  cursor: pointer;
+}
+
+.contributor-form  input {
+  background-color: #283036;
+  color: rgba(255, 255, 255, 0.38);
+  font-weight: 400;
+  border: none;
+  overflow: visible;
+  outline: none;
+  flex: 1;
+}
+
+.button-join-us:hover {
+  background-color: #FF5C12;
 }
 
 /* footer */
